Fixed navbar overlap issues

--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@ main {
   align-items: center;
   padding: 2rem;
   text-align: center;
-  padding-top: 80px;
+  padding-top: var(--navbar-height);
 }
 
 button {
